--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# My Stuff
+
+conversations-pretty.json
+GPT-Export/
+*.md
+
+# Vim
+
+*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
